tests/fail-break1.mg
void main () {
  break; // error: cannot break in outermost block
  std::end_game();
}
